@@ -1,4 +1,7 @@
 release 1.5 (11-2010)
+- Fixed issue 624
+  http://java.net/jira/browse/JERSEY-624
+  Async client API incorrectly handled TypeListener<ClientResponse>
 - Fixed issue 620
   http://java.net/jira/browse/JERSEY-620
   Exceptions thrown by a nullary constructor of a resource were incorrectly
